# zvanicni-materijali

./: README.md
01-uvod-u-cpp/01-average/: Makefile  main.cpp
01-uvod-u-cpp/02-stars/: main.cpp
01-uvod-u-cpp/03-collections/: Makefile  deque.cpp  forward_list.cpp  list.cpp  main.cpp  map.cpp  set.cpp  vector.cpp
02-dinamicka-memorija/01-raw-pointers/: Makefile  main.cpp
02-dinamicka-memorija/02-sharedptr/: main.cpp
02-dinamicka-memorija/03-uniqueptr/: main.cpp
03-uml-oop-deo1/01-fraction/: Fraction.cpp  Fraction.drawio  Fraction.hpp  Makefile  main.cpp
03-uml-oop-deo1/02-linkedlist/: List.drawio  list.cpp  list.hpp  main.cpp
04-uml-oop-deo2/03-student/: Makefile  Student.drawio  main.cpp
04-uml-oop-deo2/04-vehicles/: Bicycle.hpp  Car.hpp  Makefile  Truck.hpp  Vehicle.hpp  VehiclePark.hpp  VehicleWithWindows.hpp  Vehicles.drawio  main.cpp
04-uml-oop-deo2/05-multi-noncopyable/: Makefile  MultiNonCopyable.drawio  main.cpp
04-uml-oop-deo2/06-multi-penguin/: Makefile  MultiBirds.drawio  main.cpp
05-graficki-korisnicki-interfejs/01-calculator/: 01-calculator.pro
05-graficki-korisnicki-interfejs/02-mice/: 02-mice.pro  main.cpp  resources.qrc
06-genericke-klase-funkcije/01-generic-functions/: main.cpp  (+1 more)
10-cpp-biblioteke-cmake/04-cmake/: .gitignore  CMakeLists.txt  build.sh
10-cpp-biblioteke-cmake/04-cmake/include/: FileNotFoundException.h  Image.h
10-cpp-biblioteke-cmake/04-cmake/resources/: CMakeLists.txt
10-cpp-biblioteke-cmake/04-cmake/src/: FileNotFoundException.cpp  Image.cpp  app.cpp
10-cpp-biblioteke-cmake/04-cmake/tutorial/: README.md
(+107 files in other folders)
